{
    "name": "MovementActions",
    "maps": [
        {
            "name": "Ship",
            "id": "5ae85091-f10f-45c8-b714-dcbe13f11538",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "35e905a6-7751-403d-92b0-60955b69367c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "10a45e53-c084-4062-abca-825460ffb2eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "6369dc29-610c-46e8-a9a8-c02d6ab65d0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "07b897af-37d0-4bc6-b985-b66eb5db3f28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateUp",
                    "type": "Button",
                    "id": "661a0832-b21b-439d-93e0-eb04d66ec5f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateDown",
                    "type": "Button",
                    "id": "46332c97-47ed-43fd-9eb2-ecb3fdbe237f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateAlongZLeft",
                    "type": "Button",
                    "id": "80ae6132-1f93-460c-ab25-58d603118fa1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateAlongZRight",
                    "type": "Button",
                    "id": "59a75029-c5e4-49c3-ad89-5225e5b70046",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4b9f60ef-37eb-4a8a-a4bd-fc95152b77b3",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0f77964-f241-48cb-a63c-8e21ea090522",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5566531-67a3-467c-9e53-b3d586d2046b",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "231de01d-4a9a-4b32-8ccd-e86e64c47c1c",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14af3159-4637-428d-8c99-598ab09324c3",
                    "path": "<Keyboard>/#(Q)",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RotateUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a44b7bc-b0b2-4ca0-8a78-0f6714885bf1",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RotateDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9a051e2-cf02-4417-bd18-d624c10e4b04",
                    "path": "<Keyboard>/#(Z)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongZLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1d94ef3-97f5-4ea7-b790-5163e84526db",
                    "path": "<Keyboard>/#(C)",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongZRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}